# housekeeper

./: .gitattributes  .gitconfig  .gitignore  .pre-commit-config.yaml  README.md  design.md  pyproject.toml  runbook.md
configs/: models.yaml  services.yaml
configs/nats/: server.conf
configs/ntfy/: server.yml
docs/: README.md  bus.md  models.md
launchd/: com.housekeeper.nats.plist  com.housekeeper.ntfy.plist
scripts/: bootstrap_models.sh  bootstrap_nats.sh  bootstrap_ntfy.sh
src/housekeeper/: __init__.py  bus.py  cli.py  models.py  notifier.py  platform_info.py  services.py
systemd/: nats.service  ntfy.service
tests/: test_bus.py  test_cli.py  test_models.py  test_notifier.py  test_package.py  test_platform_info.py  test_services.py
